Revert to `get(0)` when running on Java 8, 11 & 17